--- a/src/assets/style/postitem.css
+++ b/src/assets/style/postitem.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: #fff; 
+    color: #fff;  
     border: 1px solid rgba(229, 243, 245, 0.5);
     margin: .2rem;
     width: 20rem;
@@ -12,6 +12,7 @@
     cursor: pointer;
     background-color: rgb(243, 237, 237);
     padding: 2rem 3rem;
+
     
 }
 
@@ -24,7 +25,7 @@
 }
 
 .post-item__wrapper h3 {
-    color: white;
+    color: white; 
     text-align: center;
 }
 
@@ -39,7 +40,7 @@
 
 .read {
     background: rgb(197, 7, 102);
-    padding: .3rem;
+    padding: .5rem;
     border-radius: 3px;
 }
 
@@ -53,6 +54,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 16em;
 }
 .fa-readme {
     color: rgb(234, 233, 247);
