--- a/src/assets/style/editpost.css
+++ b/src/assets/style/editpost.css
@@ -26,8 +26,10 @@
     display: flex;
     justify-content: center;
 }
-input {
+.edit-input {
     margin-top: 1rem;
+    width: 18rem;
+    margin-right: .5rem;
 }
 
 textarea {
