--- a/src/assets/style/deletepost.css
+++ b/src/assets/style/deletepost.css
@@ -22,6 +22,9 @@
     text-decoration: none;
 }
 
+.delete-link {
+    text-decoration: none;
+}
 .delete-cancel:hover {
     background-color: rgb(55, 139, 190);
     transform: translateY(-.1rem);
