--- a/src/assets/style/addpost.css
+++ b/src/assets/style/addpost.css
@@ -1,6 +1,6 @@
 .add-post__container {
     padding: 2rem 10rem;
-    background-color: rgb(43, 37, 37);
+    background-color: rgb(243, 237, 237);
     width: 100vw;
     display: flex;
     justify-content: center; 
@@ -14,11 +14,12 @@
     align-items: center;
     flex-direction: column;
     line-height: 1.9;
-    border: 3px solid #fff;
-    border-radius: 10px;
-    background-image: linear-gradient(-60deg, #ff5858 0%, #f09819 100%);     
+    border: 3px solid var(--primary);
+    border-radius: 5px;
     color: white;
     font-weight: 700;
+    background-image: linear-gradient(-60deg, #ff5858 0%, #f09819 100%);         
+
 
 }
 
@@ -42,13 +43,12 @@ input {
 
 select {
     padding: 1.1rem;
-    margin-top: 1rem;
     margin-left: 1rem;
     font-family: 'Montserrat';
 }
 textarea {
-    width: 37rem;
-    height: 20rem;
+    width: 57rem;
+    height: 21rem;
     font-size: 16px;
     font-family: 'Montserrat';
     padding: 1rem;
@@ -56,6 +56,9 @@ textarea {
     border-radius: 3px;
 }
 
+.file-btn {
+    padding: 1.4rem;
+}
 .btn-save,
 .btn-cancel {
     padding: 1.2rem;
