--- a/src/assets/style/postitem.css
+++ b/src/assets/style/postitem.css
@@ -7,11 +7,12 @@
     color: #fff;  
     border: 1px solid rgba(229, 243, 245, 0.5);
     margin: .2rem;
-    width: 20rem;
+    width: 46rem;
     border-radius: 3px;
     cursor: pointer;
     background-color: rgb(243, 237, 237);
     padding: 2rem 3rem;
+    background-color: white;
 
     
 }
@@ -31,6 +32,12 @@
 
 
 
+.post-image__small {
+    width: 100%;
+    margin-top: 2rem;
+}
+
+
 .link {
     text-decoration: none;
     color: white;
@@ -39,13 +46,13 @@
 }
 
 .read {
-    background: rgb(197, 7, 102);
+    background: var(--primary);
     padding: .5rem;
     border-radius: 3px;
 }
 
 .read:hover {
-    background: rgb(131, 11, 71);
+    background: var(--primary-dark);
     transform: translateY(-.1rem);
 
 }
@@ -54,7 +61,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 16em;
 }
 .fa-readme {
     color: rgb(234, 233, 247);
