--- a/src/assets/style/postlist.css
+++ b/src/assets/style/postlist.css
@@ -1,22 +1,42 @@
 
 
-
 .blog-header__container {
-    background-image: linear-gradient(-60deg, #ff5858 0%, #f09819 100%);   
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 4rem 4rem;
+    background-image: linear-gradient(-60deg, #ff5858 0%, #f09819 100%);    
+    color: white;
+
+
+}
+.blog-header__wrapper {
     background-size: cover;
     background-position: top;
-    padding: 5rem 4rem;
-    width: 100vw;
+    width: 80vw;
+    height: 20rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 4rem;
+    background-image: linear-gradient(-60deg, #ff5858 0%, #f09819 100%);    
+    color: white;
+
 }
 
 .sub-header {
-    color: white;
+    
     margin-top: 2rem;
 }
 
+
 .posts-container {
     padding: 3rem 5rem;
-    background-color: rgb(43, 37, 37);
+    background-color: rgb(243, 237, 237);
+
+
 }
 
 
@@ -28,7 +48,7 @@
 }
 
 .add-post-link {
-    color: rgb(238, 218, 218);
+    color:#ff5858;
     padding: 1rem;
     text-decoration: none;
     font-family: 'Montserrat';
@@ -54,7 +74,7 @@
 .posts-wrapper {
     margin-top: 3rem;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     justify-items: center;
     grid-gap: 1rem;
 
@@ -62,10 +82,22 @@
 
 
 .blog-header {
-    color: white;
     text-align: center;
 }
 
+
+
+
+
+@media screen and (max-width: 2051px) {
+    .posts-wrapper {
+        grid-template-columns: repeat(2, 1fr);
+        
+    
+    }
+
+
+}
 @media screen and (max-width: 1024px) {
     .container-blog {
         padding: 0;
@@ -76,7 +108,7 @@
     }
 
     .posts-wrapper {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns:1fr;
     }
 }
 
@@ -86,10 +118,7 @@
         padding: 2rem 2rem;
     }
 
-    .posts-wrapper {
-        grid-template-columns: repeat(2, 1fr);
-    }
-  
+   
 }
 
 @media screen and (max-width: 500px) {
