--- a/src/assets/style/viewpost.css
+++ b/src/assets/style/viewpost.css
@@ -1,7 +1,8 @@
 .viewpost-wrapper {
     padding: 5rem 10rem;
-    background-color: rgb(43, 37, 37);
+    background-color: rgb(243, 237, 237);
     width: 100vw;
+    min-height: 100vh;
     display: flex;
     justify-content: center; 
 
@@ -12,11 +13,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     background-position: center;
     background-size: cover;
     border-radius: 5px;
-    width: 40rem;
+    width: 80vw;
     color: white;
 
 
@@ -61,25 +61,40 @@
 
 
 
-.header-container {
+.viewpost-header-container {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    
 }
 
+.viewpost-header {
+    color: black;
+    text-align: center
+}
 h3 {
     margin: 2rem;
-    color: rgb(255, 255, 255);
     font-size: 17px;
+    color: white;
 }
 
 .viewpost-body {
     background: rgb(247, 243, 243);
-    padding: 2rem 2rem;
+    padding: 2rem 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.post-image__big {
+    width: 50%;
+    align-self: center;
 }
 
 .viewpost-description {
     color: rgb(14, 13, 13);
-    line-height: 1.8;
+    line-height: 2.4;
+    margin-top: 2rem;
 
 }
 .buttons-wrapper {
@@ -146,6 +161,9 @@ button {
     
     }
 
+    .post-image__big {
+        width: 100vw;
+    }
     .viewpost-header {
         padding: 1rem 1rem;
     }
