added description and substr on posts

--- a/src/assets/style/postitem.css
+++ b/src/assets/style/postitem.css
@@ -37,7 +37,11 @@
     margin-top: 2rem;
 }
 
-
+.post-description {
+    color: rgb(24, 23, 23);
+    margin-top: 1rem;
+    line-height: 1.5;
+}
 .link {
     text-decoration: none;
     color: white;
