--- a/src/assets/style/addpost.css
+++ b/src/assets/style/addpost.css
@@ -14,11 +14,11 @@
     align-items: center;
     flex-direction: column;
     line-height: 1.9;
-    border: 3px solid var(--primary);
+    border: 3px solid lightgray;
     border-radius: 5px;
-    color: white;
     font-weight: 700;
-    background-image: linear-gradient(-60deg, #ff5858 0%, #f09819 100%);         
+    background-color: white;
+    /* background-image: linear-gradient(-60deg, #ff5858 0%, #f09819 100%);          */
 
 
 }
@@ -26,6 +26,7 @@
 .input-topics {
     display: flex;
     justify-content: center;
+    flex-direction: column;
     margin: 1rem;
     align-items: center;
 }
@@ -33,39 +34,35 @@
 .title-category {
     margin-left: 1rem;
 }
-input {
-    width: 14rem;
-    padding: .9rem;
-    margin-left: 1rem;
-    font-size: 16px;
-    font-family: 'Montserrat';
-}
 
-select {
-    padding: 1.1rem;
-    margin-left: 1rem;
-    font-family: 'Montserrat';
+label {
+    align-self: flex-start;
+    margin-left: 2.3rem;
 }
+input,
+select,
 textarea {
-    width: 57rem;
-    height: 21rem;
+    width: 40rem;
+    padding: .6rem;
     font-size: 16px;
     font-family: 'Montserrat';
-    padding: 1rem;
-    margin-top: 1rem;
     border-radius: 3px;
+    border: 1px solid lightgray;
+    margin-top: .6rem;
 }
 
-.file-btn {
-    padding: 1.4rem;
+textarea {
+    height: 15rem;
 }
+
+
+
+
 .btn-save,
 .btn-cancel {
-    padding: 1.2rem;
-    background-color: rgb(38, 140, 180);
-    border: none;
-    border-radius: 3px;
+    padding: .6rem;
     color: white;
+    border: none;
     cursor: pointer;
     margin: 1.5rem;
     width: 8rem;
@@ -73,6 +70,8 @@ textarea {
     justify-content: center;
     align-items: center;
     font-size: 15px;
+    background-color: rgb(38, 140, 180);;
+    border-radius: 5px;
   
     
 }
